--- a/src/ocr/home/templates/base.html
+++ b/src/ocr/home/templates/base.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="{% static 'home/style.css' %}">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     {% block content %}
     {% endblock %}
 </body>
