--- a/src/ocr/home/templates/home/app.html
+++ b/src/ocr/home/templates/home/app.html
@@ -3,10 +3,49 @@
 {% block title %}My title:{% endblock %}
 
 {% block content %}
-<h1>OCR app</h1>
-<p class="{{msg_class}}">
-    {{message}}
-</p>
-
-<a href="{% url 'home' %}">Home</a>
+<div class="text-center">
+  <h1>InvOCR</h1>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <div class="text-start">
+        <h5>Add an invoice</h5>
+      </div>
+      <form method="post" enctype="multipart/form-data" onsubmit="openLoader()">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="invoice" class="form-label"></label>
+            <input class="form-control" placeholder="file input" type="file" name="invoice" accept=".jpg, .jpeg, .png"> 
+          </div>
+          <div class="mb-3">
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Json date" name="extra_promts" style="height: 2em"></textarea>
+              <label for="extra_promts" class="form-label">Add extra comma seperate fields to get values</label>
+            </div>
+          </div>
+          <div class="mb-3 text-end">
+            <button id="smbBtn" class="btn btn-success" type="submit">Submit</button>
+            <div id="loadingModal" style="display: none;">
+              <button type="button" class="btn btn-primary" disabled>
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+            </div>
+          </div>
+      </form>
+      <div class="form-floating">
+        <textarea class="form-control" placeholder="Json date" name="json_data" style="height: 25em">{{ json_data|safe }}</textarea>
+        <label for="json_data" class="form-label">Result fields</label>
+      </div>
+      <!-- <a href="{% url 'home' %}">Home</a> -->
+    </div> 
+  </div> 
+</div> 
+<script>
+    function openLoader() {
+        document.getElementById("loadingModal").style.display = "block";
+        document.getElementById("smbBtn").style.display = "none";
+      }
+</script>
 {% endblock %}
